--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -25,7 +25,7 @@ const services = [
   },
   {
     id: 4,
-    name: "Daniel The Half-Clown",
+    name: "The Daniel Experience",
     description: "The full experience: balloons, face painting, magic, juggling, and a 20-minute show.",
     icon: "fa-face-grin-wide",
     featured: false
@@ -98,7 +98,7 @@ const services = [
 
   <!-- Bottom Decorative Elements -->
   <div class="deco-bottom-left">
-    <img src="/clown-icon.svg" alt="" class="deco-img-bottom" />
+    <img src="/bang-and-pop.svg" alt="" class="deco-img-bottom" />
   </div>
 
   <div class="deco-bottom-right">
